--- a/app/src/main/res/layout/activity_donation_posting_page.xml
+++ b/app/src/main/res/layout/activity_donation_posting_page.xml
@@ -51,7 +51,7 @@
     </LinearLayout>
 
 
-    //CONTENT
+<!--    CONTENT-->
 
     <TextView
         android:id="@+id/Donation"
@@ -113,12 +113,13 @@
             android:paddingLeft="10dp">
         </EditText>
 
+
         <EditText
-            android:id="@+id/desc"
+            android:id="@+id/category"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:hint="Description"
+            android:hint="Category"
             android:background="#ECECEC"
             android:layout_marginLeft="5dp"
             android:paddingTop="2dp"
@@ -130,7 +131,7 @@
 
     <LinearLayout
         android:id="@+id/below_details2"
-        android:layout_width="match_parent"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@+id/below_details"
@@ -151,28 +152,36 @@
             android:paddingLeft="10dp">
         </EditText>
 
-        <EditText
-            android:id="@+id/category"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:hint="Category"
-            android:background="#ECECEC"
-            android:layout_marginLeft="5dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:paddingLeft="10dp">
-        </EditText>
+
 
     </LinearLayout>
+    <EditText
+        android:id="@+id/desc"
+        android:layout_width="370dp"
+        android:layout_height="80dp"
+        android:hint="Description"
+        android:background="#ECECEC"
+        android:layout_below="@id/below_details2"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:paddingLeft="10dp"
+        android:gravity="top|left"
+        android:inputType="textMultiLine|textCapSentences"
+        android:lines="5"
+        android:maxLines="5"
+        android:minLines="1"
+        android:scrollbars="none">
+    </EditText>
 
     <TextView
         android:id="@+id/contactInformation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/below_details2"
+        android:layout_below="@+id/desc"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="Contact Information:"
         android:textColor="@color/black"
         android:textStyle="bold">
@@ -210,7 +219,7 @@
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="5dp">
         </EditText>
 
         <EditText
@@ -223,7 +232,7 @@
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="5dp">
         </EditText>
 
         <EditText
@@ -236,12 +245,12 @@
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="5dp">
         </EditText>
 
     </LinearLayout>
 
-    //button continue
+<!--    button continue-->
 
     <Button
         android:id="@+id/btn_continue"
@@ -249,7 +258,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/belowContactInfo"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/btn_continue"
         android:text="Continue"
