--- a/app/src/main/res/layout/activity_donation_posting_page.xml
+++ b/app/src/main/res/layout/activity_donation_posting_page.xml
@@ -107,7 +107,7 @@
             android:layout_weight="1"
             android:hint="Title"
             android:layout_marginRight="5dp"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp">
@@ -120,7 +120,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:hint="Category"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:layout_marginLeft="5dp"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
@@ -146,7 +146,7 @@
             android:layout_weight="1"
             android:hint="Amount Needed"
             android:layout_marginRight="5dp"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp">
@@ -160,7 +160,7 @@
         android:layout_width="370dp"
         android:layout_height="80dp"
         android:hint="Description"
-        android:background="#ECECEC"
+        android:background="@drawable/bg_radius_ten_gray"
         android:layout_below="@id/below_details2"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
@@ -203,7 +203,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:hint="Full Name"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp">
@@ -215,7 +215,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:hint="Email"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
@@ -228,7 +228,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:hint="Phone Number"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
@@ -241,7 +241,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:hint="Preferred Contact Method"
-            android:background="#ECECEC"
+            android:background="@drawable/bg_radius_ten_gray"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
@@ -257,9 +257,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/belowContactInfo"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="100dp"
         android:background="@drawable/btn_continue"
         android:text="Continue"
         android:textAllCaps="false"
@@ -272,6 +272,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/navBot"
             android:layout_width="match_parent"
